iptables-rpi
# Generated by iptables-save v1.4.21 on Fri Oct 13 06:40:35 2017
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [18:1450]
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i wlan0 -p icmp -j ACCEPT
-A INPUT -s 192.168.0.1/32 -i wlan0 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 8880 -j ACCEPT
-A INPUT -d 192.168.0.108/32 -i wlan0 -p tcp -m tcp --sport 1024:65535 --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.0.108/32 -i wlan0 -p tcp -m tcp --sport 1024:65535 --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.0.108/32 -i wlan0 -p tcp -m tcp --sport 80 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.0.108/32 -i wlan0 -p tcp -m tcp --sport 443 --dport 1024:65535 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri Oct 13 06:40:35 2017
